--- a/wisdomCampus/html/studentManage/student-index.html
+++ b/wisdomCampus/html/studentManage/student-index.html
@@ -11,6 +11,13 @@
 				color: #63BBFF;
 			}
 			
+			
+			.mui-bar-tab .mui-tab-item .mui-icon {
+			    width: 16px;
+			    height: 16px;
+			    left: -5px;
+			}
+			
 			.mui-segmented-control {
 				font-size: 15px;
 				font-weight: 400;
@@ -44,6 +51,10 @@
 				color: #fff;
 				background-color: red;
 			}
+			.mui-tab-label{
+				font-size: 12px;
+				color: #999;
+			}
 		</style>
 	</head>
 
@@ -63,11 +74,11 @@
 				<span id="flag1" class="mui-tab-label">学生行为</span>
 			</a>
 			<a class="mui-tab-item" href="../../html/studentManage/student-talkRecord.html">
-				<span class="mui-icon mui-icon-contact"></span>
+				<span class="mui-icon mui-icon-chatboxes-filled"></span>
 				<span id="flag2" class="mui-tab-label">谈话记录</span>
 			</a>
 			<a class="mui-tab-item" href="../../html/studentManage/student-review.html">
-				<span class="mui-icon mui-icon-contact"></span>
+				<span class="mui-icon mui-icon-compose"></span>
 				<span id="flag3" class="mui-tab-label">量化考评</span>
 			</a>
 		</nav>
