--- a/wisdomCampus/html/studentManage/student-attendance.html
+++ b/wisdomCampus/html/studentManage/student-attendance.html
@@ -21,16 +21,19 @@
 				background: #F0F0F0;
 			}
 			.mui-segmented-control .mui-control-item{
-				color: #0D0D0D;
 				border: 0px;
+				color: #666;
+				font-size: 12px;
 			}			
 			.mui-segmented-control .mui-control-item.mui-active {
-			    color: #0D0D0D;
 			    background-color: transparent;
+			    color: #666;
+				font-size: 12px;
 			}
 			.mui-segmented-control .mui-control-item span{
 				font-size: 12px;
 				padding: 0 0 0 5px;
+				color: #666;
 			}
 			.leftTag{
 				font-size: 14px;
@@ -70,7 +73,7 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;" id="actionHead">
+		<header class="mui-bar mui-bar-nav" style="background-color:#3c9bfe;" id="actionHead">
 			<a onclick="mui.back()" class="mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">学生考勤</h1>
 			<a href="#bottomPopover" class="mui-pull-right" style="color: white;width:120px;height: 45px; font-size: 25px;"><img style="width: 17px;float: right;margin: 12px 5px 0 0;" src="../../img/utils/more.png"/></a>
@@ -92,10 +95,10 @@
 									<a class="mui-btn mui-btn-red">删除</a>
 								</div>
 								<a class="mui-slider-handle" href="javascript:;" @tap="gotoDeatil(index,actionModel)">
-									<img class="mui-media-object mui-pull-left" :src=actionModel.stuImg>
-									<div class="mui-media-body">
+									<img class="mui-media-object mui-pull-left" style="width: 40px;height: 40px;" :src=actionModel.stuImg>
+									<div class="mui-media-body" style="font-size: 14px;color: #333;">
 										{{actionModel.studentName}}【 {{actionModel.gradeName}}{{actionModel.className}}】
-										<p class='mui-ellipsis'>{{actionModel.detail}}</p>
+										<p class='mui-ellipsis' style="font-size: 12px;color: #666;">{{actionModel.detail}}</p>
 									</div>
 								</a>
 							</li>
