--- a/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
@@ -68,7 +68,7 @@
 			
 			.aCss {
 				font-size: 15px;
-				color: #999999;
+				color: #333;
 				width: 130px;
 				float: left;
 			}
@@ -170,7 +170,7 @@
 		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;" id="actionHead">
 			<a onclick="mui.back()" class="mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">谈话记录详情</h1>
-			<a id="finish" class="mui-pull-right" style="color: white;font-size: 15px;">{{edit}}</a>
+			<a id="finish" class="mui-pull-right" style="color: white;font-size: 14px;">{{edit}}</a>
 		</header>
 		<div class="mui-content mui-fullscreen" style="background: white;">
 			<div id='talk'>
@@ -186,7 +186,7 @@
 				</div>
 				<div :style="{visibility: isEdit=='hide'? 'hidden' : 'initial' }">
 					<div style="background-color: #f2f3f5;height: 10px;"></div>
-					<div class="mui-row title-body">
+					<div class="mui-row title-body" style="font-size: 15px;color: #333;">
 						<span class="body-title" >谈话内容</span>
 					</div>
 					
