--- a/wisdomCampus/html/studentManage/student-review.html
+++ b/wisdomCampus/html/studentManage/student-review.html
@@ -93,7 +93,7 @@
 					<div class="mui-scroll">
 						<ul class="mui-table-view">
 							<li class="mui-table-view-cell mui-media" v-for="(actionModel,index) in actionArray">
-								<a class="mui-slider-handle" href="javascript:;" @tap="gotoDeatil(1)">
+								<a class="mui-slider-handle" href="javascript:;" @tap="gotoDeatil(actionModel,index)">
 									<template v-if="actionModel.type=='周评'">
 										<div class="mui-media-body">
 											<span class="leftTag-title" style="background: #FF6AC8;">{{actionModel.type}}</span><span class="leftTag">{{actionModel.gradeName}}{{actionModel.className}}{{actionModel.year}}年{{actionModel.week}}学生行为量化考评</span>
@@ -180,9 +180,9 @@
 					actionArray: []
 				},
 				methods: {
-					gotoDeatil:function(index){
-						console.log('点击第'+index+'个标签进入详情')
-//						utils.mOpenWithData("../../html/studentManage/student-action-Detail.html", {});	
+					gotoDeatil:function(model,index){
+						console.log('点击第'+index+'个标签进入详情');
+						utils.mOpenWithData("../../html/studentManage/student-reviewClass.html", model);	
 					},
 					toPage:function(url){
 //						plus.webview.open(url);
