--- a/wisdomCampus/html/studentManage/student-reviewClass.html
+++ b/wisdomCampus/html/studentManage/student-reviewClass.html
@@ -76,7 +76,7 @@
 					<p @click="changeMarkMap" class="mui-pull-right">{{reviewDetialData.reviewDetial.markMap[reviewDetialData.markMapIndex].text}} ></p>
 				</a>
 				<div class="chart" id="lineChart"></div>
-				<h5>| 量化总评</h5>
+				<h5 style="margin-top: 50px;">| 量化总评</h5>
 				<!--<p class="mui-pull-right" style="margin-top: -20px;">请假 ></p>-->
 				<img @click="addSubDetail" class="mui-pull-right" style="margin-top: -20px;width: 35px;height: 35px;" src="../../img/firstPage/firstPage5.png" />
 				<div style="text-align: center;">
@@ -99,7 +99,7 @@
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-media" @click="clickStuDetail(stuModel)" v-for="(stuModel,index) in reviewDetial.serArray">
 					<a class="mui-navigate-right">
-						<img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
+						<img class="mui-media-object mui-pull-left" src="../../img/utils/noImgPerson.jpg">
 						<div class="mui-media-body">
 							<p class="mui-pull-left" style="margin-top: 10px;">{{stuModel.studentName}}</p>
 							<p class="mui-pull-right" style="margin-top: 10px;margin-right: 30px;">{{stuModel.score}}分/{{stuModel.evaGrade}}</p>
@@ -110,7 +110,7 @@
 		</div>
 
 		<div id="div"></div>
-		<div id="popoverDetailData" class="mui-popover" style="height: 350px;">
+		<div id="popoverDetailData" class="mui-popover" style="height: 250px;">
 			<div class="mui-popover-arrow"></div>
 			<p style="font-weight: bold;margin-left: 15px;margin-top: 10px;color: #333;font-size: 14px;"> 加减分行为</p>
 			<div class="mui-scroll-wrapper" style="margin-top: 30px;">
@@ -230,7 +230,7 @@
 					reviewDetial: {},
 					lineEchartDetail: {
 						grid: {
-							x: 35, //到左侧的距离
+							x: 45, //到左侧的距离
 							x2: 10, //到右侧的距离
 							y: 30, //到上面的距离
 							y2: 55 //到下面的距离
@@ -268,6 +268,10 @@
 						//直角坐标系中横轴数组，数组中每一项代表一条横轴坐标轴，仅有一条时可省略数值    
 						//横轴通常为类目型，但条形图时则横轴为数值型，散点图时则横纵均为数值型
 						xAxis: [{
+							axisLabel: {
+								interval: 0,
+								rotate: 40
+							},
 							type: 'category', //坐标轴类型，横轴默认为类目型'category'
 							data: ['1月', '2月', '3月', '4月', '5月', '6月', '7月'] //类目型坐标轴文本标签数组，指定label内容。 数组项通常为文本，'\n'指定换行
 						}],
@@ -281,6 +285,8 @@
 						}],
 						//sereis的数据: 用于设置图表数据之用。series是一个对象嵌套的结构；对象内包含对象
 						series: [{
+							symbol:false,
+							showAllSymbol:false,
 							name: '蒸发量', //系列名称，如果启用legend，该值将被legend.data索引相关
 							type: 'line', //图表类型，必要参数！如为空或不支持类型，则该系列数据不被显示。
 							data: [2.0, 4.9, 7.0, 23.2, 25.6, 76.7, 135.6] //系列中的数据内容数组，折线图以及柱状图时数组长度等于所使用类目轴文本标签数组axis.data的长度，并且他们间是一一对应的。数组项通常为数值 
@@ -340,7 +346,7 @@
 				},
 				methods: {
 					clickStuDetail: function(model) {
-						//						utils.mOpenWithData("../../html/studentManage/student-reviewStudent.html", model);
+												utils.mOpenWithData("../../html/studentManage/student-reviewStudent.html", model);
 					},
 					changeMarkMap: function() {
 						var btnArray = [];
