--- a/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
@@ -349,7 +349,7 @@
 			console.log('2222:' + JSON.stringify(curPage));
 			
 			if(curPage.id==null){
-				talkTitle.isEdit='show'		
+				talkTitle.isEdit='hide'		
 			}else{
 				talkTitle.isEdit='show'	
 			}
