--- a/wisdomCampus/html/studentManage/student-action-add.html
+++ b/wisdomCampus/html/studentManage/student-action-add.html
@@ -246,6 +246,8 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/vue.min.js"></script>
+		<script src="../../js/demoCssJs/jquery-2.1.4.js"></script>
+		<script src="../../js/demoCssJs/jquery-weui.js"></script>
 		<!--<script type="text/javascript" src="../../js/publicProtocol.js"></script>-->
 		<script type="text/javascript" src="../../js/classRoom/mui.picker.min.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
@@ -263,9 +265,9 @@
 		<script type="text/javascript" src="../../js/utils/showvideoutil.js"></script>
 		<script type="text/javascript" src="../../js/utils/showaudio.js"></script>
 		<script type="text/javascript" src="../../js/utils/gallerypick.js"></script>
+		<script src="../../js/utils/cloudutil.js"></script>
 		<script src="../../js/utils/store.js"></script>
 		<script src="../../js/utils/utils.js"></script>
-		<script src="../../js/lib/jquery.js"></script>
 		<script src="../../js/lib/vconsole/vconsole.min.js"></script>
 		<script src='../../js/utils/compressVideo.js'></script>
 		<script src="../../js/utils/mui.picker.js"></script>
