--- a/wisdomCampus/html/studentManage/student-action-add.html
+++ b/wisdomCampus/html/studentManage/student-action-add.html
@@ -245,10 +245,36 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/weui.min.js"></script>
+		<script src="../../js/demoCssJs/jquery-2.1.4.js"></script>
+		<script src="../../js/vue.min.js"></script>
+		<script src='../../js/lib/vconsole/vconsole.min.js'></script>
+		<script src="../../js/demoCssJs/jquery-weui.js"></script>
+		<!--视频、照片控件用-->
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<script type="text/javascript" src="../../js/utils/MultiMedia.js"></script>
+		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
+		<script type="text/javascript" src="../../js/lib/qiniu/qiniu.js"></script>
+		<script type="text/javascript" src="../../js/utils/cryption.js"></script>
+		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
+		<script type="text/javascript" src="../../js/utils/storageKeyName.js"></script>
+		<script type="text/javascript" src="../../js/mui.zoom.js"></script>
+		<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
+		<script type="text/javascript" src="../../js/utils/compress.js"></script>
+		<script type="text/javascript" src="../../js/utils/recordvideoutil.js"></script>
+		<script type="text/javascript" src="../../js/utils/playutil.js"></script>
+		<script type="text/javascript" src="../../js/utils/showvideoutil.js"></script>
+		<script type="text/javascript" src="../../js/utils/showaudio.js"></script>
+		<script type="text/javascript" src="../../js/utils/gallerypick.js"></script>
+		
+		<script src="../../js/utils/utils.js"></script>
+		<script src="../../js/utils/cloudutil.js"></script>
+		<script src='../../js/utils/store.js'></script>
+		<!--<script src="../../js/publicProtocol.js"></script>-->
+		<!--<script src="../../js/mui.min.js"></script>
 		<script src="../../js/vue.min.js"></script>
 		<script src="../../js/demoCssJs/jquery-2.1.4.js"></script>
 		<script src="../../js/demoCssJs/jquery-weui.js"></script>
-		<!--<script type="text/javascript" src="../../js/publicProtocol.js"></script>-->
 		<script type="text/javascript" src="../../js/classRoom/mui.picker.min.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/utils/MultiMedia.js"></script>
@@ -271,6 +297,10 @@
 		<script src="../../js/lib/vconsole/vconsole.min.js"></script>
 		<script src='../../js/utils/compressVideo.js'></script>
 		<script src="../../js/utils/mui.picker.js"></script>
+		<script src="../../js/utils/mui.poppicker.js"></script>-->
+		
+		<script type="text/javascript" src="../../js/classRoom/mui.picker.min.js"></script>
+		<!--<script src="../../js/utils/mui.picker.js"></script>-->
 		<script src="../../js/utils/mui.poppicker.js"></script>
 		<script src="../../js/studentManage/studentManagePermission.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
@@ -395,9 +425,10 @@
 			
 			
 			var pathList = []; //记录需要删掉的图片和缩略图
+			var encNameList = []; //附件名称
 			var QNUptoken; //token数据
 			var uploadNum = 0; //记录上传的次数
-			var hideOption; //隐藏键盘的数据
+			var hideOption; //隐藏键盘的数据 
 			var multiMedia; //多媒体控件
 
 			//多媒体控件
@@ -488,7 +519,7 @@
 						var wd = events.showWaiting();
 						document.getElementById("finish").disabled = true;
 						if(multiMedia.data.PictureArray.length == 0 && multiMedia.data.VideoArray.length == 0 && multiMedia.data.AudioArray.length == 0) { //没有传附件
-							addNote(wd, '3', '', '', 0);
+							addNotice(wd, '3', '', '', 0, '');
 						} else {
 							uploadFile(wd); //上传文件
 						}
@@ -503,8 +534,12 @@
 			 * @param {Object} encAddr 附件地址
 			 * @param {Object} encImg 附件缩略图地址
 			 */
-			function addNote(wd, encType, encAddr, encImg, encLen) {
+			var addNotice = function(wd, encType, encAddr, encImg, encLen, encName) {
 				console.log('encImg:' + encImg);
+								console.log('encType:' + encType);
+								console.log('encAddr:' + encAddr);
+								console.log('encImg:' + encImg);
+								console.log('encLen:' + encLen);
 				//附件名称
 				var encName = '';
 				if(encAddr.length > 0) {
@@ -550,11 +585,11 @@
 				uploadNum = getUpTokenData.fileArray.length; //记录上传的次数
 								console.log('uploadNum:' + uploadNum);
 								console.log('getUpTokenData:' + JSON.stringify(getUpTokenData));
-				CloudFileUtil.getUpLoadTokens(getUpTokenData, function(data) { 
-										console.log("getUpLoadTokens111111 " + JSON.stringify(data));
+				CloudFileUtil.getUpLoadTokens(getUpTokenData, function(data) {
+					//					console.log("getUpLoadTokens111111 " + JSON.stringify(data));
 					if(data.code == 1) {
-												console.log('上传配置 ' + JSON.stringify(data.configure));
-												console.log('上传凭证 ' + JSON.stringify(data.data));
+						//						console.log('上传配置 ' + JSON.stringify(data.configure));
+						//						console.log('上传凭证 ' + JSON.stringify(data.data));
 						QNUptoken = data.data; //token数据
 
 						if(multiMedia.data.PictureArray.length != 0) { //图片
@@ -566,9 +601,9 @@
 									var fileName = filePath[filePath.length - 1];
 									var fileId = fileName.split("_")[0];
 									if(multiMedia.data.PictureArray[j].id == fileId) {
-										//										console.log('QNUptoken.Data[i].Domain:'+QNUptoken.Data[i].Domain);
-										//										console.log('+QNUptoken.Data[i].Key:'+QNUptoken.Data[i].Key);
-										//										multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+										//										console.log('QNUptoken.Data[i].Domain:' + QNUptoken.Data[i].Domain);
+										//										console.log('+QNUptoken.Data[i].Key:' + QNUptoken.Data[i].Key);
+										multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
 										multiMedia.data.PictureArray[j].domain = window.storageKeyName.QNPB + QNUptoken.Data[i].Key;
 									}
 								}
@@ -610,7 +645,7 @@
 						taskCreate(wd);
 					} else {
 						//						console.log('### ERROR ### 获取上传凭证失败 ### ');
-						document.getElementById("finish").disabled = false;
+						//						document.getElementById("finish").disabled = false;
 						wd.close();
 						mui.toast('上传失败 ' + data.message);
 					}
@@ -622,7 +657,7 @@
 			 */
 			function BatchDelete(paths, wd) {
 				var batchDelete = {
-					appId: 8, //int 必填 项目id
+					appId: 4, //int 必填 项目id
 					urls: paths //array 必填 需要获取下载token文件的路径
 				}
 				/**
@@ -657,7 +692,6 @@
 						var num; //记录第几个文件
 						if(multiMedia.data.PictureArray.length !== 0) { //图片
 							for(var k = 0; k < multiMedia.data.PictureArray.length; k++) {
-								//								console.log('multiMedia.data:'+multiMedia.data.PictureArray[k].path);
 								var path = multiMedia.data.PictureArray[k].path.split("/");
 								var name = path[path.length - 1];
 								if(fileName == name) {
@@ -689,8 +723,9 @@
 						}
 						CloudFileUtil.upload(fPath, QNUptoken.Data[i].Token, QNUptoken.Data[i].Key, function(upload, status) {
 							//上传任务完成的监听
-							//							console.log('上传任务完成' + status + '|' + JSON.stringify(upload));
+							//														console.log('上传任务完成' + status + '|' + JSON.stringify(upload));
 							if(status == 200) {
+
 								//console.log('上传成功');
 								QNUptoken.Data[i].task = true;
 								//QNUptoken.Data[i].persistentId = JSON.parse(upload.responseText).persistentId;
@@ -700,6 +735,10 @@
 								//记录失败后需要删除的文件
 								if(multiMedia.data.PictureArray.length !== 0) { //图片
 									pathList.push(multiMedia.data.PictureArray[num].domain);
+									var path = multiMedia.data.PictureArray[num].path.split("/");
+									var name = path[path.length - 1];
+									name = name + '(' + cloudutil.transformSize(upload.totalSize) + ')';
+									encNameList.push(name);
 								} else if(multiMedia.data.VideoArray.length !== 0) { //视频
 									pathList.push(multiMedia.data.VideoArray[num].domain);
 									pathList.push(multiMedia.data.VideoArray[num].thumb);
@@ -717,7 +756,8 @@
 									if(multiMedia.data.PictureArray.length !== 0) { //图片
 										for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
 											encAddr.push(multiMedia.data.PictureArray[j].domain);
-											encImg.push(multiMedia.data.PictureArray[j].domain);
+											//											console.log('multiMedia.data.PictureArray:'+ JSON.stringify(multiMedia.data.PictureArray[j]));
+
 										}
 										type = '1';
 									} else if(multiMedia.data.VideoArray.length !== 0) { //视频
@@ -737,13 +777,14 @@
 									}
 									var encAddrStr = encAddr.join('|');
 									var encImgrStr = encImg.join('|');
-									addNote(wd, type, encAddrStr, encImgrStr, encLen);
+									var encNameStr = encNameList.join('|');
+									addNotice(wd, type, encAddrStr, encImgrStr, encLen, encNameStr);
 								} else {
 									taskCreate(wd);
 								}
 							} else {
 								//console.log('### ERROR ### 上传失败 ### ' + status + ' ' + JSON.stringify(upload));
-								document.getElementById("finish").disabled = false;
+								//								document.getElementById("finish").disabled = false;
 								mui.toast('上传失败 ' + status + ' ' + upload.responseText);
 								if(pathList.length != 0) {
 									BatchDelete(pathList, wd);
