--- a/wisdomCampus/html/studentManage/student-action-add.html
+++ b/wisdomCampus/html/studentManage/student-action-add.html
@@ -270,34 +270,6 @@
 		<script src="../../js/utils/utils.js"></script>
 		<script src="../../js/utils/cloudutil.js"></script>
 		<script src='../../js/utils/store.js'></script>
-		<!--<script src="../../js/publicProtocol.js"></script>-->
-		<!--<script src="../../js/mui.min.js"></script>
-		<script src="../../js/vue.min.js"></script>
-		<script src="../../js/demoCssJs/jquery-2.1.4.js"></script>
-		<script src="../../js/demoCssJs/jquery-weui.js"></script>
-		<script type="text/javascript" src="../../js/classRoom/mui.picker.min.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js"></script>
-		<script type="text/javascript" src="../../js/utils/MultiMedia.js"></script>
-		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
-		<script type="text/javascript" src="../../js/lib/qiniu/qiniu.js"></script>
-		<script type="text/javascript" src="../../js/utils/cryption.js"></script>
-		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
-		<script type="text/javascript" src="../../js/utils/storageKeyName.js"></script>
-		<script type="text/javascript" src="../../js/mui.zoom.js"></script>
-		<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
-		<script type="text/javascript" src="../../js/utils/compress.js"></script>
-		<script type="text/javascript" src="../../js/utils/recordvideoutil.js"></script>
-		<script type="text/javascript" src="../../js/utils/playutil.js"></script>
-		<script type="text/javascript" src="../../js/utils/showvideoutil.js"></script>
-		<script type="text/javascript" src="../../js/utils/showaudio.js"></script>
-		<script type="text/javascript" src="../../js/utils/gallerypick.js"></script>
-		<script src="../../js/utils/cloudutil.js"></script>
-		<script src="../../js/utils/store.js"></script>
-		<script src="../../js/utils/utils.js"></script>
-		<script src="../../js/lib/vconsole/vconsole.min.js"></script>
-		<script src='../../js/utils/compressVideo.js'></script>
-		<script src="../../js/utils/mui.picker.js"></script>
-		<script src="../../js/utils/mui.poppicker.js"></script>-->
 		
 		<script type="text/javascript" src="../../js/classRoom/mui.picker.min.js"></script>
 		<!--<script src="../../js/utils/mui.picker.js"></script>-->
@@ -542,17 +514,47 @@
 								console.log('encLen:' + encLen);
 				//附件名称
 				var encName = '';
+				var encUrl = encAddr.split("|").join(",");
 				if(encAddr.length > 0) {
 					var tempArray = [];
-					var tempAddr = encAddr.split('|');
+					var tempAddr = encAddr.split(',');
 					for(var i = 0; i < tempAddr.length; i++) {
 						var tempModel = tempAddr[i];
 						var temp000 = tempModel.split('/');
 						tempArray.push(temp000[temp000.length - 1]);
 					}
-					encName = tempArray.join('|');
+					encName = tempArray.join(',');
 				}
 				console.log('encName:'+encName);
+				var tempData = {
+					id: '',
+					gradeId: talkTitle.gradeValue, 
+					classId: talkTitle.classesValue, 
+					studentId: talkTitle.studentValue, 
+					studentName: talkTitle.studentText, 
+					quantizationBehaviorId: talkTitle.actionValue, 
+					behaviorTime: talkTitle.time, 
+					behaviorDetail:talkTitle.content,
+					classNodes: talkTitle.jcValue, 
+					subCode: talkTitle.kmValue, 
+					recordTime: talkTitle.record, 
+					attachId: encUrl
+					
+				}
+				console.log('tempData:'+JSON.stringify(tempData));
+				var wd = events.showWaiting();
+				getActionSaveBehavior(tempData,function(data) {
+					wd.close();
+					console.log('8.保存行为信息 ' + JSON.stringify(data));
+					if(data.RspCode == 0) {
+						mui.toast('保存成功');
+						setTimeout(function(){
+							mui.back();
+						},2000)
+					} else {
+						mui.toast(data.RspTxt);
+					} 
+				});
 			}
 
 			/**
